--- a/estructuras_control.html
+++ b/estructuras_control.html
@@ -38,15 +38,23 @@
 				alert(meses[i]);
 			}*/
 
-			/* for (indice in array)*/
+			/* for (indice in array)
 
 			var meses = ["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"];
 
 			for (i in meses){
 				alert(meses[i]);
+			}*/
+
+			/* while 
+
+		
+			var numero = 5;
+
+			while (numero == 5){
+				alert("Texto");
 			}
-
-
+			*/
 		</script>
 	</head>
 	<body>
