--- a/funciones.html
+++ b/funciones.html
@@ -15,14 +15,93 @@
 
 			document.write(resultado + "<br>"); */ 
 
-			function saludo(){
+			/*function saludo(){
 				document.write("Hola Visitante" + "<br>");
 			}
 
 			saludo();
 			saludo();
-			saludo();
+			saludo();*/
 
+			/*function operacion (primer_numero, segundo_numero){
+				resultado = primer_numero + segundo_numero;
+				document.write(resultado + "<br>");
+			}
+
+			var numero1 = 4;
+			var numero2 = 1;
+			operacion(numero1,numero2);
+
+			var numero3 = 5;
+			var numero4 = 5;
+			operacion(numero3, numero4);
+
+			var numero5 = 8;
+			var numero6 = 23;
+			operacion(numero5, numero6); */ 
+
+			//Calcular la longitud de una cadena de texto 
+
+			/*var nombre ="Ana, Hola, Bienvenido"
+			var n_letras = nombre.length;
+
+			document.write(n_letras);
+
+			// Concatenar cadenas de texto
+
+			var mensaje1 ="Hola";
+			var mensaje2 ="Usuario";
+			var numero= 23;
+
+			var mensaje = mensaje1 + " " + mensaje2 + " " + numero;
+			document.write(mensaje); 
+
+			//Transformar Caracteres a Mayusculas
+
+			var mensaje1 = "esto es una prueba"
+			var mensaje = mensaje1.toUpperCase();
+
+			document.write(mensaje);
+
+			//Obtener un caracter que se encuentre en una posicion indicada
+
+			var mensaje = "Hola Mundo";
+			var posicion = 6;
+			
+			var letra = mensaje.charAt(posicion);
+			
+			document.write(letra);
+
+			
+
+			//Calcular posicion en la que se encuentre el caracter 
+			//indicado dentro del texto
+
+			var mensaje = "ana";
+			var posicion1 = mensaje.indexOf('a')
+			var posicion2 = mensaje.lastIndexOf('a');
+
+			document.write(posicion1 + " <br> " + posicion2);
+			
+
+			//Extrae una porcion de una cadena de texto 
+
+			var mensaje = "Hola mundo";
+			var porcion = mensaje.substring(2,8);
+
+			document.write(porcion);
+
+			*/
+
+			//Convierte una cadena de texto en array
+			//de cadenas de texto o array de letras
+
+			var mensaje = "Hola Mundo, Soy Texto";
+			var palabras = mensaje.split(); 
+			//palabras = ["hola", "Mundo" , "soy", "texto"]
+			//palabras = ["h","o","l","a"]
+
+			document.write(palabras);
 		</script>
 	</head>
 	<body>
