añadiendo otro js

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Curso JS</title>
+
   </head>
   <body>
 
         <h1>HOME</h1>
         <!--<script type="text/javascript" src="intro.js"></script>
         <script type="text/javascript" src="variables.js"></script>-->
-        <script src="funciones.js"></script>
+        <script src="scope.js"></script>
   </body>
 </html>
