--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1>HOME</h1>
         <!--<script type="text/javascript" src="intro.js"></script>
         <script type="text/javascript" src="variables.js"></script>-->
-        <script src="scope.js"></script>
+        <script src="metodos-cadenas.js"></script>
   </body>
 </html>
