--- a/formularios.html
+++ b/formularios.html
@@ -5,6 +5,16 @@
     <title>Formularios</title>
   </head>
   <body>
+    <form action="" name="formulario" method="get">
+      <input type="text" name="nombre" id="nombre" maxlength="30" placeholder="Nombre:">
+      <br>
+      <input type="radio" name="sexo" id="hombre" value="Hombre">Hombre
+      <input type="radio" name="sexo" id="mujer" value="Mujer">Mujer
+      <br>
+      <input type="checkbox" name="terminos" id="terminos"> Terminos y Condiciones
+      <br>
 
+      <input type="submit" id="btn" name="btn" value="Enviar">
+    </form>
   </body>
 </html>
