--- a/formularios.html
+++ b/formularios.html
@@ -6,21 +6,31 @@
   </head>
   <body>
     <form action="" name="formulario" method="get">
-      <input type="text" name="nombre" id="nombre" maxlength="30" placeholder="Nombre:" required>
+      <input type="text" name="nombre" id="nombre" maxlength="30" placeholder="Nombre:" >
       <br>
-      <input type="radio" name="sexo" id="hombre" value="Hombre" required>Hombre
-      <input type="radio" name="sexo" id="mujer" value="Mujer" required>Mujer
+      <input type="radio" name="sexo" id="hombre" value="Hombre" >Hombre
+      <input type="radio" name="sexo" id="mujer" value="Mujer" >Mujer
       <br>
-      <input type="checkbox" name="terminos" id="terminos" required> Terminos y Condiciones
+      <input type="checkbox" name="terminos" id="terminos" > Terminos y Condiciones
       <br>
 
       <input type="submit" id="btn" name="btn" value="Enviar">
     </form>
     <script>
       (function(){
-          var formulario = document.getElementByName('formulario')[0];
-              elementos = formulario.elements;
-              boton = document.getElemenById();
+          var formulario = document.getElementsByName('formulario')[0];
+              elementos = formulario.e
+              boton = document.getElementById('btn');
+          var validarNombre = function(e){
+            if(formulario.nombre.value == 0){
+              alert("Completa el Campo Nombre");
+              e.preventDefault();
+            }
+          };
+          var validar = function(e){
+            validarNombre(e);
+          };
+          formulario.addEventListener("submit", validar);
       }())
     </script>
   </body>
