--- a/formularios.html
+++ b/formularios.html
@@ -27,8 +27,24 @@
               e.preventDefault();
             }
           };
+          var validarRadio = function(e){
+              if(formulario.sexo[0].checked == true || formulario.sexo[1].checked == true ){
+
+              }else{
+                alert("Completa el Campo Sexo");
+                e.preventDefault();
+              }
+          };
+          var validarCheckbox = function(e) {
+            if(formulario.terminos.checked == false){
+              alert("Acepta los terminos");
+              e.preventDefault();
+            };
+          }
           var validar = function(e){
             validarNombre(e);
+            validarRadio(e);
+            validarCheckbox(e);
           };
           formulario.addEventListener("submit", validar);
       }())
