agregando js a timers.html

--- a/timers.html
+++ b/timers.html
@@ -10,7 +10,9 @@
   <script>
       //Timeout
           var saludo = function(){
-            
+              
+
+            // Interval
           }
   </script>
 </html>
