metodo seleccion first

--- a/Jquery/selectores.html
+++ b/Jquery/selectores.html
@@ -14,7 +14,8 @@
           else
             console.log('No Existe el elemento seleccionado');
           //seleccion.not('.cl1').text('Este elemento no tiene la clase cl1');
-          seleccion.has('p').text('Este elemento tiene un <p> en su contenido');
+          //seleccion.has('p').text('Este elemento tiene un <p> en su contenido');
+          $('li').first().html('<strong>Soy el Elemento 1</strong>');
       });
 
     </script>
