--- a/Jquery/g&setters.html
+++ b/Jquery/g&setters.html
@@ -7,9 +7,9 @@
 
     <script>
       $(document).on('ready', function(){
-        var almacen = $('#parrafo').html();
-        alert(almacen);
-
+        //var almacen = $('#parrafo').html();
+        //alert(almacen);
+        $('#prueba').attr("class", "ejemplo"); //metodo para acceder a cualquier extructura del html
       });
 
     </script>
@@ -18,5 +18,6 @@
       <div>
         <p id="parrafo"><strong>Hola Jquery</strong></p>
       </div>
+      <div id ="prueba"></div>
   </body>
 </html>
