--- a/Jquery/metodoCss.html
+++ b/Jquery/metodoCss.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Metodo CSS</title>
+    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    
   </head>
   <body>
-    
+
   </body>
 </html>
