--- a/Jquery/metodoCss.html
+++ b/Jquery/metodoCss.html
@@ -4,7 +4,28 @@
     <meta charset="utf-8">
     <title>Metodo CSS</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    
+    <style>
+      body,html{
+        background: #CCC;
+        color: #000;
+        font-family: Arial;
+        margin:0;
+        padding: 0;
+      }
+      #item1{
+        background: #F6F6F6;
+        height: 50px;
+        margin: 5% auto;
+        width: 300px;
+      }
+      #item2{
+        display: block;
+        background: #000;
+        height: 50px;
+        margin: 5% auto;
+        width: 300px;
+      }
+    </style>
   </head>
   <body>
 
