--- a/Jquery/metodoCss.html
+++ b/Jquery/metodoCss.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Metodo CSS</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script>
+      $(document).on('ready', function(){
+          $('body,html').css('background','#FFF');
+      });
+    </script>
     <style>
       body,html{
         background: #CCC;
