--- a/Jquery/metodoCss.html
+++ b/Jquery/metodoCss.html
@@ -33,6 +33,9 @@
     </style>
   </head>
   <body>
+    <h1>M&eacute;todo .css() de Jquery</h1>
+    <div id="item1">Item 1</div>
+    <div id="item2">Item 2</div>
 
   </body>
 </html>
