agregando una funcion json

--- a/Jquery/metodoCss.html
+++ b/Jquery/metodoCss.html
@@ -7,6 +7,12 @@
     <script>
       $(document).on('ready', function(){
           $('body,html').css('background','#FFF');
+          //Json
+          var cssH1 = {
+            'text-align': 'center',
+            'color':'red'
+          }
+          $('h1').css(cssH1);
       });
     </script>
     <style>
