agregando css style

--- a/Jquery/clasescss.html
+++ b/Jquery/clasescss.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <title>Class Jquery</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    
+    <style>
+        .test{
+          background-color: red; 
+        }
+    </style>
+
   </head>
   <body>
-
+    <div id='test'>Click On Me </div>
   </body>
 </html>
