--- a/Jquery/clasescss.html
+++ b/Jquery/clasescss.html
@@ -6,10 +6,14 @@
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <style>
         .test{
-          background-color: red; 
+          background-color: red;
         }
     </style>
-
+    <script>
+      $(document).on("ready", function(){
+        
+      })
+    </script>
   </head>
   <body>
     <div id='test'>Click On Me </div>
