--- a/Jquery/dimensiones.html
+++ b/Jquery/dimensiones.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hola</title>
+    <title>Dimensiones JQuery</title>
   </head>
   <body>
-    <script>
-      //alert("Hola Mundo");
-    </script>
+    
   </body>
 </html>
