--- a/Jquery/dimensiones.html
+++ b/Jquery/dimensiones.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <title>Dimensiones JQuery</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-
+  
   </head>
   <body>
-
+      <header>
+        <img src="../img/flisol.jpg" alt="CP"
+      </header>
+      <div id="e1">
+      </div>
+      <div id="e2">
+          <p>MADURO RENUNCIA</p>
+      </div>
   </body>
 </html>
