--- a/Jquery/dimensiones.html
+++ b/Jquery/dimensiones.html
@@ -4,7 +4,45 @@
     <meta charset="utf-8">
     <title>Dimensiones JQuery</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  
+    
+    <style>
+      body,html{
+        background: #000;
+        margin: 0;
+        padding: 0;
+      }
+      header{  <style>
+      #e2{
+        padding: 15px;
+        border:
+      }
+      p{
+        margin-left: 10px;
+      }
+    </style>
+        display: block;
+        margin: 0;
+        padding: 0;
+      }
+      #e1,#e2{
+        background: #0080FF;
+        display: block;
+        height: 100px;
+        margin: 20px auto;
+        width: 400px;
+      }
+      #e1{
+        background: #FF0040;
+        height: 150px;
+      }
+      #e2{
+        padding: 15px;
+        border:
+      }
+      p{
+        margin-left: 10px;
+      }
+    </style>
   </head>
   <body>
       <header>
