--- a/Jquery/metodoAttr.html
+++ b/Jquery/metodoAttr.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Metodo Attr Jquery</title>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js" />
+    <script>
+      $(document).on("ready", function(){
+        
+      });
+    </script>
   </head>
   <body>
 
