--- a/Jquery/metodoAttr.html
+++ b/Jquery/metodoAttr.html
@@ -6,11 +6,16 @@
     <script src="http://code.jquery.com/jquery-1.7.2.min.js" />
     <script>
       $(document).on("ready", function(){
-        
+
       });
     </script>
   </head>
   <body>
-
+    <div id='prueba' class='pruebaClass'></div>
+    <a href="http://www.google.com.ve">Google</a>
+    <form>
+      <input type=''>
+      <input type='Submit'>
+   </form> 
   </body>
 </html>
