attr cambio clase

--- a/Jquery/metodoAttr.html
+++ b/Jquery/metodoAttr.html
@@ -6,6 +6,8 @@
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script>
       $(document).on("ready", function(){
+          //var clase = $('#prueba').attr('class'); //OBTENER UN VALOR DE PARAMETRO
+          $('#prueba').attr('class','cambieLaClase'); //CAMBIO DE PARAMETRO
           var clase = $('#prueba').attr('class');
           alert(clase);
       });
