attr remover parametro

--- a/Jquery/metodoAttr.html
+++ b/Jquery/metodoAttr.html
@@ -7,7 +7,8 @@
     <script>
       $(document).on("ready", function(){
           //var clase = $('#prueba').attr('class'); //OBTENER UN VALOR DE PARAMETRO
-          $('#prueba').attr('class','cambieLaClase'); //CAMBIO DE PARAMETRO
+          //$('#prueba').attr('class','cambieLaClase'); //CAMBIO DE PARAMETRO
+          $('#prueba').removeAttr('class'); //REMOVER PARAMETRO
           var clase = $('#prueba').attr('class');
           alert(clase);
       });
