--- a/Jquery/CCRE.html
+++ b/Jquery/CCRE.html
@@ -5,6 +5,21 @@
     <title>CCRE</title>
   </head>
   <body>
-    
+    <header>
+      <img src="../Jquery/img/cakephp2.png" alt="CP"/>
+    <header>
+    <ol>
+      <li>Elemento 1</li>
+      <li>Elemento 2</li>
+      <li>Elemento 3</li>
+      <li>Elemento 4</li>
+    </ol>
+    <div id="e1">
+      <p>Div 1</p>
+    </div>
+    <div id="e2">
+      <p>Div 2</p>
+    </div>
+
   </body>
 </html>
