--- a/Jquery/CCRE.html
+++ b/Jquery/CCRE.html
@@ -4,6 +4,44 @@
     <meta charset="utf-8">
     <title>CCRE</title>
   </head>
+  <style>
+    body,html{
+      background: #000;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+    header{
+      display: block;
+      margin: 0 auto 50px auto;
+      width: 365px;
+    }
+    ol{
+      display: block;
+      width: 500px;
+      margin: 0 auto;
+    }
+    ol li{
+      background: #088A29;
+      margin: 5px auto;
+      height: 30px;
+      width: 100%;
+    }
+    button{
+      display: block;
+      margin: 0 auto;
+      width: 80px;
+    }
+    div{
+      background: #FE2E64;
+      height: 50px;
+      display: block;
+      width: 400px;
+      margin: 2px auto;
+
+    }
+  </style>
+
   <body>
     <header>
       <img src="../Jquery/img/cakephp2.png" alt="CP"/>
@@ -14,6 +52,7 @@
       <li>Elemento 3</li>
       <li>Elemento 4</li>
     </ol>
+    <button id="test">Ejecutar</button>
     <div id="e1">
       <p>Div 1</p>
     </div>
