--- a/Jquery/dimensiones.html
+++ b/Jquery/dimensiones.html
@@ -18,39 +18,23 @@
         margin: 0;
         padding: 0;
       }
-      header{
-        display: block;
-        margin: 0;
-        padding: 0;
-        width: 365px;
+      ol li{
+        background: #008A29;
+        margin: 5px auto;
+        height: 30px;
+        width: 100%;
       }
-      #e2{
-        padding: 15px;
-        border:
-      }
-      p{
-        margin-left: 10px;
+      button{
         display: block;
-        margin: 0;
-        padding: 0;
+        margin: 0 auto;
+        width: 80px;
       }
-      #e1,#e2{
-        background: #0080FF;
+      div{
+        background: #FE2E64;
+        height: 50px;
         display: block;
-        height: 100px;
-        margin: 20px auto;
         width: 400px;
-      }
-      #e1{
-        background: #FF0040;
-        height: 150px;
-      }
-      #e2{
-        padding: 15px;
-        border-radius: 60px 0 60px 0;
-      }
-      p{
-        margin-left: 10px;
+        margin: 2px auto;
       }
     </style>
   </head>
