--- a/Jquery/CCRE.html
+++ b/Jquery/CCRE.html
@@ -3,44 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>CCRE</title>
-  </head>
-  <style>
-    body,html{
-      background: #000;
-      color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-    header{
-      display: block;
-      margin: 0 auto 50px auto;
-      width: 365px;
-    }
-    ol{
-      display: block;
-      width: 500px;
-      margin: 0 auto;
-    }
-    ol li{
-      background: #088A29;
-      margin: 5px auto;
-      height: 30px;
-      width: 100%;
-    }
-    button{
-      display: block;
-      margin: 0 auto;
-      width: 80px;
-    }
-    div{
-      background: #FE2E64;
-      height: 50px;
-      display: block;
-      width: 400px;
-      margin: 2px auto;
+      <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+      <script>
+        
+      </script>
+      <style>
+      body,html{
+        background: #000;
+        color: #fff;
+        margin: 0;
+        padding: 0;
+      }
+      header{
+        display: block;
+        margin: 0 auto 50px auto;
+        width: 365px;
+      }
+      ol{
+        display: block;
+        width: 500px;
+        margin: 0 auto;
+      }
+      ol li{
+        background: #088A29;
+        margin: 5px auto;
+        height: 30px;
+        width: 100%;
+      }
+      button{
+        display: block;
+        margin: 0 auto;
+        width: 80px;
+      }
+      div{
+        background: #FE2E64;
+        height: 50px;
+        display: block;
+        width: 400px;
+        margin: 2px auto;
 
-    }
-  </style>
+      }
+      </style>
+  </head>
 
   <body>
     <header>
