mover elemento luego de seleccion

--- a/Jquery/CCRE.html
+++ b/Jquery/CCRE.html
@@ -10,7 +10,10 @@
               //FUNCION MOVER ELEMENTO PRINCIPAL AL FINAL
               //$('ol li:first').appendTo('ol:first');
               //FUNCTION MOVER ELEMENTO FINAL AL PRINCIO
-              $('ol li:last').prependTo('ol:first');
+              //$('ol li:last').prependTo('ol:first');
+
+              $('ol li:first').insertAfter('#e1');
+
 
             })
         });
